# OOD

./: .clang-format  .gitignore  CMakeLists.txt  out.ppm
exam/: .$exam.drawio.bkp  .$exam.drawio.dtmp  base.md  ddd1.md  ddd2.md  exam.drawio  gui.md
exam/patterns/: adapter.md  bridge.md  builder.md  command.md  composite.md  decorator.md  factory.md  factory_method.md  iterator.md  observer.md  prototype.md  proxy.md  state.md  strategy.md  template_method.md  visitor.md
exam/solid/: dip.md  isp.md  lsp.md  ocp.md  srp.md
labs/: lines.sh
labs/lab1/: CMakeLists.txt  lectionNotes.md
labs/lab1/SimUDuck/lib/Duck/: Duck.h
labs/lab1/SimUDuck/lib/Duck/Quack/: IQuakBehavior.h
labs/lab1/functional_ducks/src/: main.cpp
labs/lab1/functional_ducks/src/lib/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
labs/lab1/functional_ducks/src/lib/Behaviors/: DanceBehaviorFactory.h  FlyBehaviorFactory.h  QuackBehaviorFactory.h
labs/lab1/object_ducks/: CMakeLists.txt  Ducks.mmd
labs/lab1/object_ducks/src/: main.cpp
labs/lab1/object_ducks/src/lib/Duck/: Duck.h  RedheadDuck.h
labs/lab1/object_ducks/src/lib/Duck/Dance/: NoDanceBehavior.h  WaltzBehavior.h
labs/lab1/object_ducks/tests/: danceTests.cpp  quackTests.cpp
labs/lab1/shapes/: CMakeLists.txt  Shapes.mmd  test.txt
labs/lab1/shapes/src/: main.cpp
labs/lab1/shapes/src/Command/: CommandExecutor.h  CommandListener.h
labs/lab1/shapes/src/Command/Commands/: CommandFactory.h  Commands.h  ICommand.h
labs/lab1/shapes/src/Command/Enum/: ArgumentType.h
labs/lab1/shapes/src/Command/Regex/: Regex.h
labs/lab1/shapes/src/Command/ShapeParser/: CircleParser.h  IShapeParser.h  LineParser.h  RectangleParser.h  ShapeParserFactory.h  TextParser.h  TriangleParser.h
labs/lab1/shapes/src/GFX/: Color.h  ICanvas.h  SFMLCanvas.h
labs/lab1/shapes/src/Shapes/: Geometry.h  IShape.h  Picture.h  Shape.h  ShapesCommandLine.h
labs/lab1/shapes/src/Shapes/Models/: CircleModel.h  IShapeModel.h  LineModel.h  RectangleModel.h  TextModel.h  TriangleModel.h
labs/lab1/shapes/src/Thread/: ConsoleThread.h  WindowThread.h
labs/lab1/shapes/tests/: MockCanvas.h  commandTests.cpp  pictureTests.cpp  shapeModelTests.cpp  shapeParserTest.cpp  shapeTests.cpp
labs/lab1/src/: Class.cpp  main.cpp
labs/lab1/src/lib/: DuckFunctions.h
labs/lab1/src/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RubberDuck.h
labs/lab1/src/lib/Duck/Dance/: IDanceBehavior.h  MinuetBehavior.h
labs/lab1/src/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
labs/lab1/src/lib/Duck/Quack/: IQuakBehavior.h
labs/lab1/tests/: danceTests.cpp  quackTests.cpp
labs/lab10/mvc/: .$cooking.png.bkp  .$mvc.drawio.bkp  .$mvvm.drawio.bkp  .$mvvm.png.bkp  CMakeLists.txt  cooking.drawio  mvvm.drawio
labs/lab10/mvc/src/: main.cpp
labs/lab10/mvvm/: .gitignore  go.mod  go.sum  lines.sh  main.go
labs/lab10/mvvm/appmodel/: canvas.go  editable.go  shape.go
labs/lab10/mvvm/docs/: .$overkill.drawio.dtmp  overkill.drawio
labs/lab10/mvvm/geometry/: geometry.go
labs/lab10/mvvm/graphics/: graphics.go
labs/lab10/mvvm/history/: command.go  command_test.go  history.go  history_test.go
labs/lab10/mvvm/model/: canvas.go  shape.go  shape_test.go
labs/lab10/mvvm/modelview/: observer.go  shape.go
labs/lab2/: example.mmd
labs/lab2/Signal2WeatherStation/: CMakeLists.txt
labs/lab2/Signal2WeatherStation/src/: Concepts.h  Subject.h  WeatherData.h  main.cpp
labs/lab2/WeatherStation/: CMakeLists.txt  weatherStation.mmd
labs/lab2/WeatherStation/src/: Observer.h  StatsObserver.h  Subject.h  WeatherData.h  main.cpp
labs/lab2/WeatherStation/tests/: ObserverTest.cpp  SubjectTest.cpp
labs/lab3/coffee/: CMakeLists.txt  a.out  coffee.mmd
labs/lab3/coffee/src/: Beverages.h  Condiments.h  IBeverage.h  coffee.vcxproj  main.cpp
labs/lab3/coffee/tests/: condimentsTests.cpp
labs/lab3/streams/: streams.mmd
labs/lab3/streams/src/: main.cpp
labs/lab3/streams/tests/: DataProcessorTests.cpp  FunctionalTests.cpp  InputStreamTests.cpp  Operator<<Tests.cpp  OutputStreamTests.cpp  StreamDecoratorTests.cpp
labs/lab4/legacy/: CMakeLists.txt
labs/lab4/legacy/tests/: picture.txt
labs/lab4/shapes/: CMakeLists.txt  shapes.mmd
labs/lab4/shapes/src/: main.cpp
labs/lab4/shapes/tests/: DesignerTests.cpp  FactoryTests.cpp  MockCanvas.h  ShapeTests.cpp
labs/lab5/: lection.md
labs/lab5/editor/: CMakeLists.txt  editor.mmd
labs/lab5/editor/src/: main.cpp
labs/lab5/editor/tests/: CommandFactoryTest.cpp  HistoryTest.cpp
labs/lab6/adapter/: CMakeLists.txt  adapter.mmd
labs/lab6/adapter/src/: main.cpp
labs/lab6/adapter/tests/: ClassAdapterTests.cpp  GraphicsLibTests.cpp  ModernGraphicsLibTests.cpp  ObjectAdapterTests.cpp
labs/lab7/slides/: CMakeLists.txt  slides.mmd
labs/lab7/slides/src/: main.cpp
labs/lab7/slides/src/lib/: Canvas.h  CommonTypes.h  Shapes.h  main.cpp
labs/lab7/slides/src/lib/Shapes/: GroupShape.h  IShape.h  Shapes.h
labs/lab7/slides/tests/: GroupShapeTests.cpp  ShapesTest.cpp
labs/lab8/gumball/: CMakeLists.txt  gumball.mmd
labs/lab8/gumball/src/: GumBallMachineWithDynamicallyCreatedState.h  GumBallMachineWithState.h  main.cpp
labs/lab9/proxy/: CMakeLists.txt  proxy.mmd
lections/: decorator.md  factory.md  observer.md  prototype.md
samples/command/DocumentEditor/: main.cpp
samples/proxy/CopyOnWrite/: CoW.h
samples/state/gumball_machine/: NaiveGumBallMachine.h
samples/template-method/coffee-and-tea/: coffee-and-tea.vcxproj
samples/visitor/visitor/: visitor.vcxproj
(+129 files in other folders)
